# agentvault

./: .gitignore  CHANGELOG.md  LICENSE  PLAN.md  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: publish.yml  test.yml
agentvault/: __init__.py  __main__.py  cli.py  config.py  mcp_server.py  web.py
agentvault/adapters/: aider.py  base.py  claude_code.py  codex.py  cursor.py  opencode.py
agentvault/core/: archive.py  decisions.py  fts_index.py  ingester.py  optimizer.py  patterns.py  redactor.py  rules.py  schema.py  store.py  summarizer.py  todos.py
agentvault/hooks/: auto_save.sh  file_context.py  injection_log.py
agentvault/writers/: chromadb_writer.py  obsidian.py
docs/: ARCHITECTURE.md
tests/fixtures/: sample_aider_chat.md  sample_claude_session.jsonl  sample_codex_session.jsonl  sample_cursor_conversation.json  sample_opencode_history.jsonl
tests/test_adapters/: test_aider.py  test_claude_code.py  test_codex.py  test_cursor.py  test_opencode.py
tests/test_core/: test_archive.py  test_config.py  test_decisions.py  test_file_context_hook.py  test_fts_index.py  test_ingester.py  test_injection_log.py  test_mcp_server.py  test_obsidian_writer.py  test_optimizer.py  test_patterns.py  test_redactor.py  test_rules.py  test_store_delete.py  test_store_hybrid.py  test_store_init.py  test_summarizer.py  test_todos.py  test_web.py
