[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "agentvault-memory"
version = "0.4.0"
description = "Unified memory layer that consolidates history from all your AI coding agents — searchable by humans (Obsidian) and by AI (MCP)."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
  { name = "Saurav Kalia" },
]
keywords = ["ai", "memory", "mcp", "claude", "obsidian", "chromadb"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "chromadb>=0.6.0,<0.7",
  "click>=8.0",
  "pyyaml>=6.0",
  "rich>=13.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.21",
  "ruff>=0.4",
]

[project.scripts]
agentvault = "agentvault.cli:cli"

[project.urls]
Homepage = "https://github.com/sauravkalia/agentvault"
Repository = "https://github.com/sauravkalia/agentvault"
Issues = "https://github.com/sauravkalia/agentvault/issues"
Documentation = "https://github.com/sauravkalia/agentvault#readme"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
# Regex patterns and MCP tool descriptions can't be broken across lines
"agentvault/core/redactor.py" = ["E501"]
"agentvault/mcp_server.py" = ["E501"]

[tool.setuptools.packages.find]
include = ["agentvault*"]
